--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 OPENAI_API_KEY=
 DEFAULT_MESSAGE="Powered by OpenAI Vercel
 - 由 [@ourongxing](https://github.com/ourongxing) 基于 [chatgpt-demo](https://github.com/ddiu8081/chatgpt-demo) 开发，查看 [源码](https://github.com/ourongxing/chatgpt-vercel)，欢迎自部署。
-- 该网站由wqj提供，不提供长期服务，，请勿滥用。
+- 该网站由xrxt110(微信号)提供，不提供长期服务，，请勿滥用。
 - API Key 由我自己免费提供，注意不要滥用。
 - [[Shift]] + [[Enter]] 换行。开头输入 [[/]] 或者 [[空格]] Prompt 预设。[[↑]] 可编辑最近一次提问。点击顶部名称滚动到顶部，点击输入框滚动到底部。"
 DEFAULT_SETTING='{
